[tool.poetry]
name = "klarda-python-sdk"
version = "1.0.1"
description = "Refined Python library for interaction with Klarda's APIs."
authors = [
    "Thinh Q.D. Pham <thinh.pham@klarda.com> <pqducthinhbka@gmail.com>",
]
license = "MIT License"

homepage = "https://klarda.com/"
repository = "https://github.com/klardaofficial/klarda-python-sdk"
keywords = ["klarda", "sdk", "blockchain", "token"]
readme = "README.md"
include = ["LICENSE"]

packages = [{ include = "klarda" }]


[tool.poetry.dependencies]
python = "^3.8.1"
web3 = "^6.4.0"
pydantic = "^2.0.8"
pyhumps = "^3.8.0"
typing-extensions = "^4.6.2"
eth-typing = "^4.0.0"
urllib3 = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"